--- a/Notebook/templates/Notebook/notebook.html
+++ b/Notebook/templates/Notebook/notebook.html
@@ -73,7 +73,7 @@
                 </div>
                 {% else %}
             {% for data in user.notebookuser.all %}
-                <div class="card mt-2 shadow-sm " style="width: 100%; border-left:4px solid #C42D63; border-top:0px; border-bottom:0px; border-right:0px;">
+                <div class="card mt-2 shadow-sm rounded-0 " style="width: 100%; border-left:4px solid #C42D63; border-top:0px; border-bottom:0px; border-right:0px;">
                     <div class="card-body p-3  content">
                         <div class="d-flex justify-content-between">
                             <h5 class="text-muted title" id="head{{data.id}}">{{data.heading}}</h5> 
