--- a/blogs/templates/blogs/create.html
+++ b/blogs/templates/blogs/create.html
@@ -1,10 +1,36 @@
 {% extends 'Core/snippets/base.html' %}
+{% load shortcut %}
 {% load crispy_forms_tags %}
 {% block header %}
 {% include 'Core/snippets/header.html' %}
 
 {% endblock %}
+
+
+{% block jscss %}
+<!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css">-->
+<link rel="stylesheet" href="https://cdn.datatables.net/1.10.23/css/dataTables.bootstrap5.min.css">
+<script src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.23/js/dataTables.bootstrap5.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ace.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ace.min.js"></script>
+{% endblock %} 
 {% block style %}
+.slider {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    overflow: hidden;
+    background-color:#fff;
+
+    transition: all 1s;
+  }
+  
+  .slider.close {
+    top: 100%;
+    height: 0;
+  }
 .button{
     background-color:#C92C60;
     
@@ -60,6 +86,9 @@
 #div_id_facebook label{
     display:none;
 }
+#div_id_description label{
+    display:none;
+}
 #div_id_medium label{
     display:none;
 }
@@ -78,19 +107,83 @@
 
 {% endblock %}
 {% block body %}
+
+<div class="slider close" style="z-index:1000; overflow-y: scroll;">
+    <div class="row">
+        <div class="col-12 d-flex justify-content-end">
+            <a class="btn btn-sm border btn-outline-dark  p-2 cancel m-2" style="font-size: 12px;" href="#"><i class="fa fa-close"></i> Close</a>
+        </div>
+        <div class="col-12 ">
+           <div class="ml-5 mr-5 pl-5 pr-5">
+   
+
+  <div class="mt-5">
+    <table id="example" class="table" style="width:100% ; font-size: 13px;">
+        <thead> 
+            <tr class="text-muted">
+                <th>S.No.</th>
+                <th style="width:70%;">Title</th>
+                <th>Date, Time</th>
+                <th>Status</th>
+                <th>Options</th>
+               
+            </tr>
+        </thead>
+        <tbody class="text-dark">
+            {% for x in data %}
+                    <tr>
+                        <td  class=" text-muted">
+                            <div style="display: flex; justify-content: space-between;">
+                                {{forloop.counter}}
+                                
+                            </div>
+                        </td>
+                        <td   class=" text-muted" >
+                            
+                        <div style="display: flex; justify-content: space-between;" >
+                            <a href="/blog/{{x.title|replace}}/{{x.id}}/" style="underline:none; text-decoration:none;">{{x.title}}</a>
+                            
+                        </div>
+                        
+                    </td>
+                        
+                        <td class="text-muted">{{x.date_Publish}}, {{x.time}}</td>
+                        <td class="text-muted">
+                           {{x.status}}
+                        </td>
+                        <td>
+                            
+                           <a href="/blog/edit/content/{{x.id}}/" class="btn btn-sm" title="Edit" data-toggle="tooltip"><i class="fa fa-pencil"></i></a>
+                           <a href="/blog/delete/content/{{x.id}}/" class="btn btn-sm" title="Delete" data-toggle="tooltip"><i class="fa fa-trash"></i></a>
+                        </td>
+                    </tr>
+                {% endfor %}
+        </tbody>
+    </table>
+  </div>
+           </div>
+
+        </div> 
+    </div>
+</div>
 <div class="container">
     
     <div class="row mt-5" >
+        <a  style="font-size: 14px;color:white; position: fixed; bottom:3rem; right:3rem;" class="btn btn-sm border shaodw-sm btn-dark trigger"><i class="fa fa-pencil"></i> My Workspace</a>
+                        
         <div class="col-12 mt-5">
-            
+           
+
+            <form id="form" action="" method="POST" enctype="multipart/form-data">
+                <input type="hidden" value="{{id}}" name="iding">
                 <div class="mb-2 d-flex justify-content-between">
                     <div style="font-size: 20px; font-weight: 600; color:#202C33" class="ml-5 pl-5">
                         <i class="fa fa-file-text"></i> Write Blogs
                     </div>
                     <div class="mr-5 pr-5">
-                        <a id="submiting" onclick="Submit()" style="font-size: 12px;color:white;" class="btn btn-sm border shaodw-sm button"><i class="fa fa-paper-plane"></i> Post</a>
-                        <a  style="font-size: 12px;" class="btn btn-sm border shaodw-sm bg-light"><i class="fa fa-eye"></i> Preview</a>
-                        <a  style="font-size: 12px; color:white;" class="btn btn-sm border btn-dark shaodw-sm "><i class="fa fa-cloud-upload"></i> Draft</a>
+                        <button   onclick="Submit()" style="font-size: 12px;color:white;" class="btn btn-sm border shaodw-sm button"><i class="fa fa-paper-plane"></i> Post</button>
+                        
+                        <button  type="submit" formaction="{% if edit %}/blog/draft/content/saved/{{ids}}/{% else %}/blog/draft/content/save/{% endif %}" style="font-size: 12px; color:white;" class="btn btn-sm border btn-dark shaodw-sm "><i class="fa fa-cloud-upload"></i> Draft</a>
                     </div>
                 </div>
                 <div class="mr-5 ml-5 pl-5 pr-5" style="">
@@ -99,14 +192,15 @@
                         {{error}}
                     </div>
                     {% endif %}
-                    <form id="form" action="" method="POST" enctype="multipart/form-data">
+                    
                         {% csrf_token %}
+                        <input  type="hidden" value="{{ids}}" name="iding">
                     <div class="form-row border-top pt-5">
-                        <div class="form-group col-12 col-md-3 col-lg-2 mb-0">
-                            <div style="position: absolute; top:1rem; left:0.9rem; color:#202C33; font-size: 14px; font-weight: 600;">
+                        <div class="form-group col-12 col-md-3 col-lg-2 mb-0" >
+                            <div style="position: absolute; top:1rem; left:0.9rem; color:#202C33; font-size: 14px; font-weight: 600; ">
                                <i class="fa fa-image"></i> Image Thumbnail
                             </div>
-                            {{ form.image|as_crispy_field }}
+                            {{ form.image}}
                         
                           </div>
 
@@ -114,13 +208,13 @@
                             <div style="position: absolute; top:1rem; left:1rem; color:#202C33; font-size: 14px; font-weight: 600;">
                                <i class="fa fa-video-camera"></i> Video Thumbnail
                             </div>
-                            {{ form.video|as_crispy_field }}
+                            {{ form.video }}
                         
                           </div>
                           <div class="form-group col-12 col-md col-lg mb-0 mt-1 d-flex justify-content-end">
                              <div class="dropdown show">
                                
-                                <a title="Add Social Links" data-toggle="dropdown" href="#" class="btn btn-sm  d-flex align-items-center shadow justify-content-center rounded-circle button text-white" style="width:40px; height:40px; "><i class="fa fa-link"></i></a>
+                                <a title="Add Social Links" data-toggle="dropdown" href="#" class="btn btn-sm  d-flex align-items-center shadow justify-content-center rounded-circle button text-white mb-2" style="width:40px; height:40px; "><i class="fa fa-link"></i></a>
                            
                               
                                 <div class="dropdown-menu border-0 shadow dropdown-menu-right p-2" aria-labelledby="dropdownMenuLink" style="width:300px;">
@@ -140,6 +234,9 @@
                           {{ form.tags|as_crispy_field }}
                         </div>
                         <div class="form-group col-12 mb-0">
+                            {{ form.description|as_crispy_field }}
+                          </div>
+                        <div class="form-group col-12 mb-0">
                             {{ form.content|as_crispy_field }}
                           </div>
                           {{form.media}}
@@ -150,11 +247,22 @@
            
         </div>
     </div>
+
 </div>
 {% endblock %}
 
 {% block script %}
 <script>
+    $('.trigger, .cancel').click(function() {
+        $('.slider').toggleClass('close');
+    });
+
+    $(document).ready(function() {
+        var table = $('#example').DataTable({
+            
+        });
+        
+    } ); 
     document.getElementById('id_medium').placeholder = "Medium Link";
     document.getElementById('id_medium').style.fontSize = "13px";
     document.getElementById('id_other').placeholder = "Other Link";
@@ -167,8 +275,20 @@
     document.getElementById('id_instagram').style.fontSize = "13px";
     document.getElementById('id_twitter').placeholder = "Twitter Link";
     document.getElementById('id_twitter').style.fontSize = "13px";
-    function Submit(){
-        document.getElementById("form").submit();
+    function check(){
+        var data = confirm("Are you sure to post your blog?");
+        console.log(data);
     }
+    function Submit(){
+        
+            document.getElementById("form").submit();
+        
+    }
+   
+ function Draft(){
+     document.getElementById('form').formAction = '/blog/draft/content/save/';
+ }
+
+   
 </script>
 {% endblock %}
