--- a/coding/templates/coding/homepage.html
+++ b/coding/templates/coding/homepage.html
@@ -57,7 +57,7 @@ tr:hover{
                 <a href="{% url 'explore' %}">
                 <div class="card" >
                     <span style="position: absolute; font-size: 10px;" class=" mt-1 ml-2  badge badge-sm badge-warning text-dark">
-                            {{day}}
+                         <!-- #region    {{day}} --> Comming Soon
                     </span>
                     <div class="card-body">
     
@@ -77,7 +77,7 @@ tr:hover{
     <a href="{% url 'contestpage' %}">
                 <div class="card card1  ml-3" >
                     <span style="position: absolute; font-size: 10px; " class=" mt-1 ml-2  badge badge-sm badge-warning text-dark">
-                           {{day}}
+                            <!-- #region    {{day}} --> Comming Soon
                     </span>
                     <div class="card-body">
     
