--- a/discuss/templates/discuss/homepage.html
+++ b/discuss/templates/discuss/homepage.html
@@ -36,7 +36,22 @@
   }
   .con:hover{
       background-color:#FAFAFA;
+
     
+  }
+  .button{
+
+    background: #fff;
+    color:#C42D63;
+  }
+  .button:hover{
+      background-color:rgb(196,45,99,0.3);
+      color:#fff;
+  
+  }
+  .page-link{
+      font-size:12px;
+      color:#C42D63;
   }
 {% endblock %}
 {% block body %}
@@ -53,12 +68,12 @@
                         <div class="card-body  ">
 
                             <center>
-                                <p class="text-muted mt-3 mb-0" style="font-weight: 500;">
+                                <p class="mt-3 mb-0" style="font-weight: 500;  color:#25364C;">
                                     What is your Question?
 
                                 </p>
                             </center>
-                            <center><p class="text-muted" style="font-size: 10px;">( Ask and Anwser )</p></center>
+                            <center><p class="" style="font-size: 10px; color:#25364C;">( Ask and Anwser )</p></center>
                            
                         </div>
                     </div>
@@ -73,7 +88,7 @@
                         </div>
                         <div class="card-body d-flex align-items-center justify-content-center">
                             <center>
-                                <p class="text-muted mt-3" style="font-weight: 500;">
+                                <p class="mt-3" style="font-weight: 500;  color:#25364C;">
                                     Interview Experience
                                 </p>
                             </center>
@@ -90,7 +105,7 @@
                         </div>
                         <div class="card-body">
                             <center>
-                                <p class="text-muted mt-3" style="font-weight: 500;">
+                                <p class="mt-3" style="font-weight: 500;  color:#25364C;">
                                     Interview Question
                                 </p>
                             </center>
@@ -107,7 +122,7 @@
                         </div>
                         <div class="card-body">
                             <center>
-                                <p class="text-muted mt-3" style="font-weight: 500;">
+                                <p class=" mt-3" style="font-weight: 500; color:#25364C;">
                                     Career and Opportunities
                                 </p>
                             </center>
@@ -124,7 +139,7 @@
                         </div>
                         <div class="card-body">
                             <center>
-                                <p class="text-muted mt-3" style="font-weight: 500;">
+                                <p class="mt-3" style="font-weight: 500;  color:#25364C;">
                                     Blogs
                                 </p>
                             </center>
@@ -141,7 +156,7 @@
                         </div>
                         <div class="card-body">
                             <center>
-                                <p class="text-muted mt-2" style="font-weight: 500;">
+                                <p class=" mt-2" style="font-weight: 500;  color:#25364C;">
                                     Support & Help & Feedback
                                 </p>
                             </center>
@@ -151,7 +166,7 @@
                 </div>
             </div>
         </div>
-
+{% if method != 'Career' %}
         <div class="col-12 col-md-7 col-lg-8 mt-3 pt-2" style="">
             <div class="card shadow-sm border-0" style="box-shadow: 2px 2px 10px rgb(0,0,0,0.05);">
                 <div class="card-body p-0 d-flex justify-content-between align-items-center" style="background-color:#FAFAFA; ">
@@ -310,17 +325,104 @@
              
             </div>
         </div>
-
         <div class="col-12 col-md-2 col-lg-2 mt-3 pt-2" style="">
             <div class="card shadow-sm border-0" style="height:300px;  position: sticky; top:4rem;">
                 <div class="card-header pb-0 d-flex align-items-center text-muted" style="background-color: white; font-size: 14px; font-weight: 600; ">
                     <p class="">Tags</p>
                 </div>
                 <div class="card-body">
-
+                    {% for i in tags %}
+                    {% if i %}
+           
+                        <a href="?tags={{i}}&method={{method}}" class="btn btn-sm border btn-outline-dark mb-1" href="#" style="font-size: 11px;">{{i}}</a>
+                   
+           
+                    {% endif %}
+                    {% endfor %}
                 </div>
             </div>
         </div>
+        {% else %}
+        <div class="col-12 col-md-7 col-lg-8 mt-3 pt-2" style="">
+            <div class="card border-0 shadow-sm rounded-0">
+                
+                <div class="card-body">
+                    <div>
+                        <p style="font-size: 14px; font-weight: 600; color:#25364C;">
+                            <i class="fa fa-search"></i> Search The Jobs That Fits For You
+                        </p>
+                    </div>
+
+                    <form class="form-inline" action="" method="GET">
+                        <div class="form-group mr-2" style="width:44.5%;">
+                          
+                          
+                          <i class="fa fa-building " style="font-size:18px; position: absolute; margin-top:0px; margin-left:10px; color: #C42D63;"></i>
+                          <input  type="text" value="{{company}}" placeholder="Job Title, Keywords, Companies" name="company" class="form-control" id="email" style=" width:100%; height:40px; padding-left:35px; font-size: 14px;">
+                        </div>
+                        <div class="form-group mr-2" style="width:45%;">
+  
+                          <i class="fa fa-map-marker" style="font-size:20px; position: absolute; margin-top:0px; margin-left:10px; color: #C42D63;"></i>
+                          
+                          <input type="text" class="form-control" name="city" value="{{city}}"placeholder="City, State, Pin Code" id="pwd" style="width:100%; height:40px; padding-left:30px; font-size: 14px;">
+                        </div>
+                        <input type="hidden" class="form-control" name="method" placeholder="City, State, Pin Code" value="{{method}}" id="met" style="width:100%; height:40px; padding-left:30px; font-size: 14px;">
+                        <button type="submit" class=" btn btn-sm button" style=" height:40px; border:1px solid #C42D63; color:#C42D63; "><i class="fa fa-search"></i> Search</button>
+                      </form>
+
+                      <div class="d-flex justify-content-center mt-4" id="loader">
+                          <i class="fa fa-spinner fa-spin"></i>
+                          
+                      </div>
+                      <div>
+                        <div class="row" id="content">
+                            
+                        </div>
+                      </div>
+                </div>
+                <div class="card-footer border-0 p-0 pt-3 pr-3">
+                    <div style="display: flex; justify-content: flex-end;" class="p-0">
+                        <nav aria-label="...">
+                            <ul class="pagination" >
+                                <li class="page-item {% if pagination.previous.0 == 'disabled' %} disabled {% endif %}" >
+                                    <a href="/jobs/listing/?company={{company}}&city={{city}}&page={{pagination.previous.1}}" class="page-link" style=""><i class="fa fa-angle-left"></i> Previous</a>
+                                </li>
+                                {% for i in pagination.pages %}
+                                <li class="page-item {% if i == pagination.active %} active {% endif %}"><a href="/jobs/listing/?company={{company}}&city={{city}}&page={{i}}" class="page-link" href="#">{{i}}</a></li>
+                                {% endfor %}
+                              <li class="page-item">
+                                <a class="page-link" href="/jobs/listing/?company={{company}}&city={{city}}&page={{pagination.next}}" href="#">Next <i class="fa fa-angle-right"></i></a>
+                              </li>
+                            </ul>
+                          </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-2 col-lg-2 mt-3 pt-2" style="">
+         
+                <div class=" mb-3 " style="width:100%;">
+                    <div>
+                        <a class="btn btn-sm trigger shadow" style="background: #C42D63; color: #fff; font-size: 13px; width: 100%;"><i class="fa fa-paper-plane"></i> Post Job Information</a>
+                    </div>
+                </div>
+            
+            <div class="card shadow-sm border-0" style="height:300px;  position: sticky; top:4rem;">
+                <div class="card-header pb-0 d-flex align-items-center border-0 d-flex align-items-center" style="  font-size: 14px; font-weight: 600; color:#25364C">
+                    <p class=" mt-1"><i class="fa fa-filter"></i> Filters</p>
+                </div>
+                <div class="card-body">
+                    {% for i in tags %}
+                    {% if i %}
+                   <a href="?tags={{i}}&method={{method}}" class="btn btn-sm border btn-outline-dark mb-1" href="#" style="font-size: 11px;">{{i}}</a>
+                    {% endif %}
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+        {% endif %}
+
+        
         <div class="slider close" style="z-index:1000;">
             <div class="row">
                 <div class="col-12 d-flex justify-content-between align-items-center p-2 pr-4" style="background-color: #FAFAFA;">
@@ -373,7 +475,50 @@
 
 {% block script %}
 <script>
+{% if method == 'Career' %}
+        window.onload = Jobscrapper();
+        function Jobscrapper(){
+            $.ajax({
+                type:"GET",
+                url:"/discuss/jobs/scrape/",
+                success:function(data){
+                    data = JSON.parse(data);
+                    document.getElementById("loader").style.display = 'none';
+                    var s;
 
+                    for(i=1; i< data.length; i++){
+                        if(data[i] != 'undefined'){
+                            s += `
+                            <div class="col-12 col-md-12 col-lg-4 mb-2">
+                                  <div class="card" style="border:1px solid #C42D63; box-shadow: 2px 2px 10px rgb(196,45,99,0.2) ;">
+                                      <div class="card-body d-flex justify-content-between" >
+                                            
+                                            <div style="width:90%;" class="ml-2">
+                                                <div class="text-dark" style="font-size: 14px; margin-top: 1px; font-weight: 600;">
+                                                    `+data[i]['title']+`
+                                                </div>
+                                                <div class="text-dark" style="font-size: 12px; margin-top: 1px;">
+                                                    <i class="fa fa-building"></i> ` +data[i]['company']['company']+ `
+                                                </div>
+                                                <div class="text-dark" style="font-size: 12px; margin-top: 1px;">
+                                                    <i class="fa fa-map-marker"></i> `+data[i]['company']['location']+`
+                                                </div>
+                                                <div>
+                                                    
+                                                </div>
+
+                                            </div>
+                                      </div>
+                                  </div>
+                            </div>
+                            `;
+                        }
+                            document.getElementById('content').innerHTML = s;
+                    }   
+                },
+            });
+        }
+{% endif %}
 
 $('.trigger, .cancel').click(function() {
   $('.slider').toggleClass('close');
