--- a/Core/templates/Core/snippets/base.html
+++ b/Core/templates/Core/snippets/base.html
@@ -35,6 +35,7 @@
         .body{
             font-family: Helvetica;
             overflow-x: hidden;
+
         }
         ::-webkit-scrollbar {
         width: 6px;
@@ -63,7 +64,7 @@
         .fa2{
             color: transparent;
             -webkit-text-stroke-width:1px;
-            -webkit-text-stroke-color:#546E7A;
+            -webkit-text-stroke-color:#E57851;
         }
         .fa3{
             color: transparent;
@@ -77,10 +78,11 @@
             border-radius:50%;
         }
         a{
-            color:#C42D63;
+            color:#393E41;
             text-decoration: none;
         }
         a:hover{
+            color:#E57851;
             text-decoration: none;
         }
         
@@ -119,7 +121,7 @@
 </head>
 
 
-<body style="overflow-x: hidden; font-family: Helvetica;  ">
+<body style="overflow-x: hidden; font-family: Helvetica;  background-color: #FAF9F7; ">
     {% block header %}
 
     {% endblock %}
