--- a/Core/templates/Core/snippets/base.html
+++ b/Core/templates/Core/snippets/base.html
@@ -71,7 +71,15 @@
             -webkit-text-stroke-width:1px;
             -webkit-text-stroke-color:#C42D63;
         }
-
+        .tag{
+    font-size:12px; 
+    border:1px solid #E57851; 
+    color:#E57851;
+}
+.tag:hover{
+    color:white;
+    background-color:#E57851;
+}
         .pulse{
             box-shadow: 0 0 0 rgba(196,45,99, 0.4);
             animation: pulse 2s 1;
