--- a/Core/templates/Core/snippets/base.html
+++ b/Core/templates/Core/snippets/base.html
@@ -59,7 +59,7 @@
         .fa1{
             color: transparent;
             -webkit-text-stroke-width: 0.5px;
-            -webkit-text-stroke-color:#546E7A;
+            -webkit-text-stroke-color:#E57851;
         }
         .fa2{
             color: transparent;
@@ -129,7 +129,7 @@
 </head>
 
 
-<body style="overflow-x: hidden; font-family: Helvetica;  background-color: #FAF9F7; ">
+<body style="overflow-x: hidden; font-family: Helvetica;  background-color: #F3F2EF; ">
     {% block header %}
 
     {% endblock %}
