--- a/Core/templates/Core/snippets/header.html
+++ b/Core/templates/Core/snippets/header.html
@@ -167,7 +167,10 @@
            </ul>
          <ul class="navbar-nav d-flex align-items-center">
             <li class="nav-item ">
-                <a class="nav-link text-dark mr-2" style="font-weight: 600;" href="{% url 'blog' %}">Blogs</a>
+                <a class="nav-link mr-3" style="font-weight: 600; color: #546E7A;" href="{% url 'blog' %}">Blogs</a>
+            </li>
+            <li class="nav-item ">
+                <a href="/blog/create/" class="nav-link mr-3 btn btn-sm rounded" style="font-weight: 600; color: #546E7A; font-size: 12px; border:1px solid #546E7A; " href="{% url 'blog' %}"><i class="fa fa-pencil"></i> Write an article</a>
             </li>
             {% if request.user.is_authenticated %}
              <!-- #region
@@ -256,25 +259,42 @@
    </a>
  
                  <a class="nav-link dropdown-toggle d-none d-sm-inline-block anc" href="#" data-toggle="dropdown">
-     <img src="/media/{{user.profile.avatar}}" class="avatar img-fluid  mr-1 rounded-circle"  style="width:30px;"/> <span class="text-dark " style="font-weight: 600;">{{user.username}}</span>
+     <img src="/media/{{user.profile.avatar}}" class="avatar img-fluid  mr-1 rounded-circle"  style="width:30px;"/> <span class="" style="font-weight: 600; color: #546E7A; font-size: 12px;">{{user.username}}</span>
    </a>
-                 <div class="dropdown-menu dropdown-menu-right text-dark" style="font-size: 14px; color:#546E7A; width:240px;">
-                     <a class="dropdown-item  pb-2 pt-2"  href="/profile/{{user}}/"><i class="fa fa1 fa-user mr-1" ></i> Profile</a>
+                 <div class="dropdown-menu dropdown-menu-right " style="font-size: 14px; color:#546E7A; width:240px;">
+                     <a class="dropdown-item  pb-2 pt-2"  href="/profile/{{user}}/">
+                        <div class="d-flex justify-content-start align-items-center">
+                            <div>
+                                <img src="/media/{{user.profile.avatar}}" class="avatar img-fluid  mr-1 rounded-circle"  style="width:40px;"/> 
+                            </div>
+                            <div class="ml-2">
+                                <div style="font-size: 13px; font-weight: 600; color: #546E7A;" class="">
+                                    {{request.user.profile.first_name}} {{request.user.profile.last_name}}
+                                </div>
+                                <div class="text-muted" style="font-size: 12px;">
+                                    @{{request.user}}
+                                </div>
+                            </div>
+                        </div>
+                    </a>
                      <div class="dropdown-divider"></div>
                      <!--
                      <a class="dropdown-item  pb-2 pt-2" href="#"><i class="fa fa-certificate fa1 mr-1"></i> My Courses</a>
-                    -->
+                   
                      <a class="dropdown-item  pb-2 pt-2" href=" 'analytics' %}?target=code"><i class="fa fa-area-chart fa1 mr-1" ></i> Analytics</a>
                      
                     
                      <a class="dropdown-item  pb-2 pt-2" href="{% url 'notebook' %}"><i class="fa fa1 fa-book fa1 mr-1 " ></i> Notebook</a>
                      <a class="dropdown-item  pb-2 pt-2" href="{% url 'playground' %}"><i class="fa fa1 fa-code mr-1" ></i> Playground</a>
-                     <a class="dropdown-item  pb-2 pt-2" href=" 'bookmark' %}"><i class="fa fa1 fa-bookmark mr-1"></i> Bookmarks</a>
-                     <a class="dropdown-item  pb-2 pt-2" href=" 'notification' %}"><i class="fa fa1 fa-bell mr-1"></i> Notifications</a>
+                      -->
+                      <a class="dropdown-item  pb-2 pt-2" href="/blog/create/" style="color: #546E7A; font-size: 13px;"><i class="fa fa1 fa-pencil mr-1"></i> Write an article</a>
+                     
+                     <a class="dropdown-item  pb-2 pt-2" href="#" style="color: #546E7A; font-size: 13px;"><i class="fa fa1 fa-bookmark mr-1"></i> Bookmarks</a>
+                     <a class="dropdown-item  pb-2 pt-2" style="color: #546E7A; font-size: 13px;" href=" 'notification' %}"><i class="fa fa1 fa-bell mr-1"></i> Notifications</a>
+                    
+                     <a class="dropdown-item  pb-2 pt-2" style="color: #546E7A; font-size: 13px;" href=" 'setting' %}"><i class="fa fa1 fa-cog mr-1"></i> Settings & Privacy</a>
                      <div class="dropdown-divider"></div>
-                     <a class="dropdown-item  pb-2 pt-2" href=" 'setting' %}"><i class="fa fa1 fa-cog mr-1"></i> Settings & Privacy</a>
-                     <div class="dropdown-divider"></div>
-                     <a class="dropdown-item  pb-2 pt-2" style="background-color: #E8E8E8;" href=""><center>Log out</center></a>
+                     <a class="dropdown-item  pb-2 pt-2" style=" color: #E57851; font-size: 13px;" href=""><center><i class="fa fa-sign-out"></i> Log out</center></a>
                  </div>
              </li>
              {% else %}
